# enclave-nitro-demo

./: .Dockerignore  Caddyfile  Cargo.toml  Dockerfile
.github/workflows/: ci.yml  cleanup.yml
src/aws/: Cargo.toml
src/aws/src/: lib.rs
src/init/: Cargo.toml  init.rs
src/init/src/: main.rs
src/proxy/: go.mod  go.sum  proxy.go
src/server/: Cargo.toml
src/server/src/: lib.rs
src/system/: Cargo.toml
src/system/src/: lib.rs
terraform/: ec2.tf  provider.tf  terraform.tfvars  user-data.sh.tpl  variables.tf  vpc.tf
