[package]
name = "init"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.134"
tokio = { version = "1.28.0", features = ["full"] }
aws = { path = "../aws"}
system = { path = "../system"}
server ={ path = "../server"}
tokio-threadpool = "0.1.18"
polling = "3.7.3"


[[bin]]
name = "init"
path = "init.rs"
